完善去水印

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -12,7 +12,7 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "PP去水印助手",
+    "navigationBarTitleText": "AI水印小助手",
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json"
